--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<html>
+<title>HTML Tutorial</title>
+<body>
+
 <frameset rows="100%">
   <frameset cols="100%">
     <frame src="http://iskcondhk.weebly.com" frameborder="0" scrolling="yes">
   </frameset>
 </frameset>
-</frameset>
+
+
+
+</body>
+</html>
