--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
 <body>
 
-<frameset rows="100%">
-  <frameset cols="100%">
-    <frame src="http://iskcondhk.weebly.com" frameborder="0" scrolling="yes">
-  </frameset>
-</frameset>
+<h1>The iframe element</h1>
 
-
+<iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials">
+</iframe>
 
 </body>
 </html>
