--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
 <html>
 <body>
-
-
-
-<iframe src="http://iskconbd.org" title="W3Schools Free Online Web Tutorials" height="100%" width="100%">
-</iframe>
-
+<embed width="100%" height="33%" data="http://iskconbd.org"></object>
+<embed width="100%" height="33%" data="english.html"></object>
+<embed width="100%" height="33%" data="hindi.html"></object>
 </body>
 </html>
