--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<embed width="100%" height="33%" data="http://iskconbd.org"></object>
+<embed width="100%" height="33%" data="copy.html"></object>
 <embed width="100%" height="33%" data="english.html"></object>
 <embed width="100%" height="33%" data="hindi.html"></object>
 </body>
