--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
-<body>
-<embed width="100%" height="33%" data="copy.html"></object>
-<embed width="100%" height="33%" data="english.html"></object>
-<embed width="100%" height="33%" data="hindi.html"></object>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://www.w3docs.com'" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://www.w3docs.com">this link</a>.</p>
+  </body>
 </html>
