--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="refresh" content="0; url='https://www.w3docs.com'" />
@@ -6,4 +6,21 @@
   <body>
     <p>Please follow <a href="https://www.w3docs.com">this link</a>.</p>
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<!-- Replace with your own title -->
+		<title>Your Project's Title</title>
+		<script>
+			// Add your own shareable dropbox link
+			window.location.replace("https://www.dropbox.com");
+		</script>
+	</head>
+	<body>
+		<!-- Español not required -->
+		<p>Redirecting you to Dropbox. Un momento, por favor.</p>
+	</body>
 </html>
