--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<title>Your Project's Title</title>
 		<script>
 			// Add your own shareable dropbox link
-			window.location.replace("https://www.dropbox.com");
+			window.location.replace("https://www.w3schools.com");
 		</script>
 	</head>
 	<body>
